// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test component: SortSelector should render properly with Props: with Props 1`] = `
<div
  className="sortSelector"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="alert-sort-selector sortSelectorName"
    >
      Time
    </span>
    <span
      app="global"
      className="a10-widget-appicon"
      style={
        Object {
          "height": "12px",
          "lineHeight": "20px",
          "marginLeft": "4px",
          "width": "12px",
        }
      }
      type="dropdown"
    >
      <img
        src={[MockFunction]}
        style={
          Object {
            "height": "12px",
            "width": "12px",
          }
        }
      />
    </span>
  </span>
</div>
`;

exports[`test component: SortSelector should render properly: without Props 1`] = `
<div
  className="sortSelector"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="undefined sortSelectorName"
    />
    <span
      app="global"
      className="a10-widget-appicon"
      style={
        Object {
          "height": "12px",
          "lineHeight": "20px",
          "marginLeft": "4px",
          "width": "12px",
        }
      }
      type="dropdown"
    >
      <img
        src={[MockFunction]}
        style={
          Object {
            "height": "12px",
            "width": "12px",
          }
        }
      />
    </span>
  </span>
</div>
`;
